examples/negative/shadowing/user_ok_collides_with_result.kai
# Negative fixture (#511 / shadowing contract — issue #502):
# user-declared variant `Ok` collides with the built-in
# `Result.Ok`. Stage 2 rejects up front with a precise
# diagnostic instead of letting cascading errors point at
# prelude code.

pub type Respuesta
  = Ok(String)
  | Other

fn main() : Unit / Console {
  print("unreachable")
}
